# loopstation

./: Cargo.toml
loopstation_core/: Cargo.toml  memory.x
loopstation_core/src/: lib.rs  stm32.rs
loopstation_plugin/: Cargo.toml  README.md  bundler.toml
loopstation_plugin/src/: lib.rs
